--- a/README
+++ b/README
@@ -9,4 +9,7 @@ x-axis and when you bring the mouse further down you will increase the speed in 
 Left Clicking:
 This will reset the canvas so you can start a new drawing.
 
+Screenshot:
+Press the spacebar.
+
 Play around and enjoy!
